@startuml
package controllers {
    package popup {
        interface SuccessCallback {
        }   
        interface ErrorCallback {
        } 
        interface BasePopupController <T extends JFrame, S extends Model> {

        } 
        abstract class PopupController<T extends JFrame & PopupView, S extends Model> {

        }

        class AddOrderPopupController {

        }

        class EditOrderPopupController {
        }

        class EmployeePopupController {
        }
        class FoodCategoryPopupController {
        }
        class FoodItemPopupController {

        }
        class ShipmentPopupControler {

        }
        class TablePopupController {

        } 

        class CustomerPopupController {

        }

        class ToppingPopupController {

        }
        package order {
            class FoodItemController {

            }

            class OrderItemController {

            }
        }
    }
}

controllers.popup.EditOrderPopupController o-- controllers.popup.order.FoodItemController
controllers.popup.EditOrderPopupController o-- controllers.popup.order.OrderItemController
controllers.popup.EditOrderPopupController o-- controllers.popup.ShipmentPopupControler
controllers.popup.EditOrderPopupController o-- controllers.popup.ToppingPopupController
controllers.popup.EditOrderPopupController --|> controllers.popup.PopupController
controllers.popup.CustomerPopupController --|> controllers.popup.PopupController
controllers.popup.EmployeePopupController --|> controllers.popup.PopupController
controllers.popup.FoodCategoryPopupController --|> controllers.popup.PopupController
controllers.popup.FoodItemPopupController --|> controllers.popup.PopupController
controllers.popup.ShipmentPopupControler --|> controllers.popup.PopupController
controllers.popup.TablePopupController --|> controllers.popup.PopupController
controllers.popup.ToppingPopupController --|> controllers.popup.PopupController
controllers.popup.AddOrderPopupController --|> controllers.popup.PopupController

controllers.popup.PopupController --|> controllers.popup.BasePopupController
@enduml